Before setting hoeffding tree 130917